@@ -312,6 +312,22 @@ name|hadoop
 operator|.
 name|yarn
 operator|.
+name|event
+operator|.
+name|AsyncDispatcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
 name|exceptions
 operator|.
 name|YarnException
@@ -447,6 +463,28 @@ operator|.
 name|container
 operator|.
 name|Container
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|nodemanager
+operator|.
+name|containermanager
+operator|.
+name|container
+operator|.
+name|ContainerState
 import|;
 end_import
 
@@ -1175,6 +1213,23 @@ argument_list|(
 name|appMap
 argument_list|)
 expr_stmt|;
+name|ConcurrentHashMap
+argument_list|<
+name|ContainerId
+argument_list|,
+name|Container
+argument_list|>
+name|containers
+init|=
+operator|new
+name|ConcurrentHashMap
+argument_list|<
+name|ContainerId
+argument_list|,
+name|Container
+argument_list|>
+argument_list|()
+decl_stmt|;
 name|when
 argument_list|(
 name|context
@@ -1185,14 +1240,62 @@ argument_list|)
 operator|.
 name|thenReturn
 argument_list|(
-operator|new
-name|ConcurrentHashMap
-argument_list|<
-name|ContainerId
-argument_list|,
-name|Container
-argument_list|>
+name|containers
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|context
+operator|.
+name|getLocalDirsHandler
 argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|dirsHandler
+argument_list|)
+expr_stmt|;
+name|MockContainer
+name|container
+init|=
+operator|new
+name|MockContainer
+argument_list|(
+name|appAttemptId
+argument_list|,
+operator|new
+name|AsyncDispatcher
+argument_list|()
+argument_list|,
+name|conf
+argument_list|,
+name|user
+argument_list|,
+name|appId
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|container
+operator|.
+name|setState
+argument_list|(
+name|ContainerState
+operator|.
+name|RUNNING
+argument_list|)
+expr_stmt|;
+name|context
+operator|.
+name|getContainers
+argument_list|()
+operator|.
+name|put
+argument_list|(
+name|container1
+argument_list|,
+name|container
 argument_list|)
 expr_stmt|;
 name|ContainersLogsBlock
