@@ -191,6 +191,9 @@ Release 2.1.1-beta - UNRELEASED
     YARN-1078. TestNodeManagerResync, TestNodeManagerShutdown, and
     TestNodeStatusUpdater fail on Windows. (Chuan Liu via cnauroth)
 
+    YARN-1194. TestContainerLogsPage fails with native builds (Roman Shaposhnik
+    via jlowe)
+
 Release 2.1.0-beta - 2013-08-22
 
   INCOMPATIBLE CHANGES
